// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Homeserver Components - Snapshots > HomeserverFooter - Snapshots > matches snapshot for default HomeserverFooter 1`] = `
<p
  class="leading-light text-sm font-medium text-muted-foreground opacity-80"
  data-testid="typography"
>
  By creating an account on the Pubky homeserver, you agree to the 
  <span
    data-testid="dialog-terms"
  >
    Terms of Service
  </span>
  ,
  <span
    data-testid="dialog-privacy"
  >
    Privacy Policy
  </span>
  , and you confirm that you are
  <span
    data-testid="dialog-age"
  >
    over 18 years old.
  </span>
</p>
`;

exports[`Homeserver Components - Snapshots > HomeserverHeader - Snapshots > matches snapshot for default HomeserverHeader 1`] = `
<div
  data-testid="page-header"
>
  <div
    data-size="large"
    data-testid="page-title"
  >
    Choose 
    <span
      class="text-brand"
    >
      homeserver.
    </span>
  </div>
  <div
    data-testid="page-subtitle"
  >
    Enter your invite code to access the Pubky homeserver. 
  </div>
</div>
`;

exports[`Homeserver Components - Snapshots > HomeserverNavigation - Snapshots > matches snapshot for HomeserverNavigation with custom continue text 1`] = `
<div
  data-testid="buttons-navigation"
>
  <button
    data-testid="back-button"
  >
    Back
  </button>
  <button
    data-testid="continue-button"
  >
    Join Server
  </button>
</div>
`;

exports[`Homeserver Components - Snapshots > HomeserverNavigation - Snapshots > matches snapshot for HomeserverNavigation with disabled continue button 1`] = `
<div
  data-testid="buttons-navigation"
>
  <button
    data-testid="back-button"
  >
    Back
  </button>
  <button
    data-testid="continue-button"
    disabled=""
  >
    Continue
  </button>
</div>
`;

exports[`Homeserver Components - Snapshots > HomeserverNavigation - Snapshots > matches snapshot for default HomeserverNavigation 1`] = `
<div
  data-testid="buttons-navigation"
>
  <button
    data-testid="back-button"
  >
    Back
  </button>
  <button
    data-testid="continue-button"
  >
    Continue
  </button>
</div>
`;
